force-app/main/default/objects/FieldRollup__c/FieldRollup__c.object-meta.xml
<CustomObject>
    <label>Field Rollup</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Rollups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>