force-app/main/default/objects/FieldRollup__c/fields/ChildObjectName__c.field-meta.xml
<CustomField>
    <fullName>ChildObjectName__c</fullName>
    <label>Child Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>