force-app/main/default/objects/FieldRollup__c/fields/ChildRelationshipName__c.field-meta.xml
<CustomField>
    <fullName>ChildRelationshipName__c</fullName>
    <label>Child Relationship Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>