force-app/main/default/objects/FieldRollup__c/fields/ParentObjectName__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectName__c</fullName>
    <label>Parent Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>