force-app/main/default/objects/FieldRollup__c/fields/RollupFieldName__c.field-meta.xml
<CustomField>
    <fullName>RollupFieldName__c</fullName>
    <label>Rollup Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>