force-app/main/default/objects/FieldRollup__c/fields/RollupType__c.field-meta.xml
<CustomField>
    <fullName>RollupType__c</fullName>
    <label>Rollup Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>